# attrecto-homework

./: .env.example  .gitignore  BLUEPRINT.md  README.md  config.py  main.py  pyproject.toml  run_dashboard.sh
dashboard/: README.md  app.py
dashboard/static/js/: dashboard.js
dashboard/templates/: dashboard.html
data/: portfolio_data.json
data/output/: portfolio_health_report.json
docs/: ARCHITECTURE.md  CHANGES.md  CONTACT_INFO_UPDATE.md  IMPLEMENTATION_PLAN.md  KEY_UPDATES.md  SETUP.md
prompts/: few_shot_examples.json  system_prompt.txt  user_prompt_template.txt
src/: ai_analyzer.py  colleagues_parser.py  database.py  email_parser.py  llm_gateway.py  models.py  report_generator.py
