[project]
name = "attrecto-homework"
version = "0.1.0"
description = "Portfolio Health Report - AI-powered system for analyzing engineering project communications"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tinydb>=4.8.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "jinja2>=3.1.6",
]

[project.scripts]
analyze = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
